// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContainer Defaults 1`] = `
<div
  className="obojobo-draft--components--more-info-button is-default-label is-mode-hidden"
>
  <button
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    ?
  </button>
</div>
`;

exports[`ModalContainer Label 1`] = `
<div
  className="obojobo-draft--components--more-info-button is-not-default-label is-mode-hidden"
>
  <button
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    Testing 123
  </button>
</div>
`;
